2003-01-20  Martin Weber <martweb@gmx.net>

	* autotrace.[dsp,vcproj]: support of input-png added.

2003-01-19  Martin Weber <martweb@gmx.net>

  	* output-pstoedit.c (pstoedit_suffix_table_init): Fixed memory allocation.

2003-01-17  Martin Weber <martweb@gmx.net>

  	* output-pstoedit.c (get_symbolicname, pstoedit_suffix_table_init): 
	removed heap corruption when using pstoedit.

2003-01-10  Masatake YAMATO  <yamato@redhat.com>

	* intl.h: include config.h only if HAVE_CONFIG_H
	is defined. suggested by Martin.

2003-01-08  Martin Weber  <martweb@gmx.net>

	 * input.c, output.c, autotrace.h: compiler warnings for new ImageMagick
	versions removed.

	 * autotrace.dsp, autotrace.vcproj: Adopted project files for new
	ImageMagick and new pstoedit release.

2003-01-06  Martin Weber <martweb@gmx.net>

	* output-pstoedit.h: Don't include pstoedit/pstoedll.h.

2003-01-06  Martin Weber <martweb@gmx.net>

 	* output.c: removed heap corruption when using pstoedit.

2002-12-18  Martin Weber <martweb@gmx.net>

 	* autotrace.c: fixed problem that , is used instead of . in ouput when
	 using German locale.

2002-12-19  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c: Likewise.

	* configure.in: Don't use VERSION. This symbol is 
	reserved by VC++. Instead AUTOTRACE_VERSION is used.

2002-11-16  Martin Weber <martweb@gmx.net>

	* despeckle.c: removed unnecessary for loop.

2002-11-16  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (libautotrace_la_SOURCES): added intl.h
	(AM_CPPFLAGS): added locale dir.
	(autotrace_LDADD): added INTLLIBS.
	(ACLOCAL_AMFLAGS): Added -I m4.

	* acconfig.h: added PACKAGE and VERSION.

	* autotrace.c (autotrace_init): New function.
	(at_fitting_opts_doc_func): New function.

	* autotrace.h (autotrace_init): New function.
	(at_fitting_opts_doc): call at_fitting_opts_doc_func.
	(at_fitting_opts_doc_func): New function.

	* configure.in: remove AUTOTRACE_ prefix from version
	number related variable names.